--- a/docker-compose/infisical/infisical.yml
+++ b/docker-compose/infisical/infisical.yml
@@ -33,11 +33,11 @@ services:
     image: infisical/frontend
     env_file: ./data/infisical/.env
     # environment:
-      # - NEXT_PUBLIC_POSTHOG_API_KEY=${POSTHOG_PROJECT_API_KEY}
-      # - INFISICAL_TELEMETRY_ENABLED=${TELEMETRY_ENABLED}
-      # - NEXT_PUBLIC_STRIPE_PRODUCT_PRO=${STRIPE_PRODUCT_PRO}
-      # - NEXT_PUBLIC_STRIPE_PRODUCT_TEAM=${STRIPE_PRODUCT_TEAM}
-      # - NEXT_PUBLIC_STRIPE_PRODUCT_STARTER=${STRIPE_PRODUCT_STARTER}
+    # - NEXT_PUBLIC_POSTHOG_API_KEY=${POSTHOG_PROJECT_API_KEY}
+    # - INFISICAL_TELEMETRY_ENABLED=${TELEMETRY_ENABLED}
+    # - NEXT_PUBLIC_STRIPE_PRODUCT_PRO=${STRIPE_PRODUCT_PRO}
+    # - NEXT_PUBLIC_STRIPE_PRODUCT_TEAM=${STRIPE_PRODUCT_TEAM}
+    # - NEXT_PUBLIC_STRIPE_PRODUCT_STARTER=${STRIPE_PRODUCT_STARTER}
 
   mongo:
     container_name: infisical-mongo
@@ -52,5 +52,5 @@ services:
 
 networks:
   default:
-    external:
-      name: infisical
+    external: true
+    name: infisical
