--- a/docker-compose/homarr.yml
+++ b/docker-compose/homarr.yml
@@ -1,4 +1,4 @@
-version: "3"
+
 
 services:
   homarr:
@@ -9,10 +9,16 @@ services:
       - ./data/homarr/configs:/app/data/configs
       - ./data/homarr/icons:/app/public/icons
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./data/homarr/data:/data
     ports:
       - "7575:7575"
+    environment:
+      - DEFAULT_COLOR_SCHEME=dark
+      - DISABLE_ANALYTICS=true
+      - TZ=Etc/UTC
+      - AUTH_PROVIDER=credentials
 
-networks: 
-  default: 
+networks:
+  default:
     external: true
     name: medianetwork
