--- a/docker-compose/uptime.yml
+++ b/docker-compose/uptime.yml
@@ -1,5 +1,5 @@
 ---
-version: "3.5"
+
 
 services:
   uptime:
@@ -15,3 +15,5 @@ networks:
   default:
     external: true
     name: medianetwork
+
+  # auth is disabled
