--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -1,1 +1,1 @@
-COMPOSE_FILE= ./homarr.yml:./plex.yml:./sonarr.yml:./watchtower.yml:./prowlarr.yml:./qbittorrent.yml:./radarr.yml:./overseerr.yml:./lidarr.yml:./readarr.yml:./tdarr.yml:./calibre.yml:./dash.yml:./wizarr.yml:./uptime.yml:./pihole.yml:./kitana.yml
+COMPOSE_FILE= ./homarr.yml:./plex.yml:./sonarr.yml:./watchtower.yml:./prowlarr.yml:./qbittorrent.yml:./radarr.yml:./overseerr.yml:./lidarr.yml:./readarr.yml:./tdarr.yml:./calibre.yml:./dash.yml:./wizarr.yml:./uptime.yml:./pihole.yml:./kitana.yml:./autoscan.yml
