--- a/docker-compose/lidarr.yml
+++ b/docker-compose/lidarr.yml
@@ -2,7 +2,7 @@
 
 services:
   lidarr:
-    image: ghcr.io/hotio/lidarr:release
+    image: ghcr.io/hotio/lidarr:latest
     container_name: lidarr
     environment:
       - PUID=1000
